# VoiceType

./: README.md  VoiceType-一键安装.bat  pyproject.toml
voicetype/: __init__.py  __main__.py
voicetype/cli/: app.py
voicetype/core/: config.py  engine.py  llm.py  recorder.py  stt.py
voicetype/gui/: app.py  donation.py  hotkeys.py
